@@ -43,9 +43,9 @@ copyright = u'2008-2011, Ben Bangert, Mike Bayer'
 # built documents.
 #
 # The short X.Y version.
-version = '1.5.4'
+version = '1.6'
 # The full version, including alpha/beta/rc tags.
-release = '1.5.4'
+release = '1.6'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
